@@ -1,5 +1,9 @@
 Revision history for DBIx::Class
 
+        - Fix issue where the query was becoming overly mangled when trying
+          to use pagination with a query that has a sub-select in the WHERE
+          clause.
+
 0.08192 2011-05-10 04:20 (UTC)
     * Fixes
         - Fix serious regression on SQLite, corrupting data when an alphanum
